before Adaptive Layout

--- a/Gaz/styles/style.css
+++ b/Gaz/styles/style.css
@@ -412,3 +412,398 @@ section {
     max-width: 295px;
     margin: 0 auto;
 }
+
+/* reviews */
+
+.reviews {
+    background-color: #222;
+}
+
+.reviews__ourclients {
+    color: #fff;
+    text-align: center;
+    padding-top: 40px;
+}
+
+.reviews__container {
+    max-width: 1140px;
+    margin: 0 auto;
+
+}
+
+.reviews__item {
+    position: relative;
+}
+
+
+.reviews__arrowleft {
+    position: absolute;
+    top: 30%;
+    cursor: pointer;
+
+}
+
+.reviews__arrowright {
+    transform: rotate(180deg);
+    position: absolute;
+    cursor: pointer;
+    top: 30%;
+    right: 0;
+}
+
+
+
+.reviews__card {
+    display: flex;
+    background-color: #F1F1F1;
+    padding: 40px;
+    border-radius: 40px;
+    margin: 40px 100px 20px 100px;
+}
+
+.reviews__img {
+    padding-right: 30px;
+}
+
+
+.reviews__username {
+    color: #2194FF;
+    font-size: 24px;
+    font-family: 'Russo One', sans-serif;
+}
+
+.reviews__city {
+    font-family: 'Russo One', sans-serif;
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: #2D2D2D;
+}
+
+.reviews__text {
+    color: #2D2D2D;
+    font-size: 16px;
+}
+
+
+
+
+
+
+.reviews__dots {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+.dots {
+    width: 60px;
+    height: 20px;
+    background-color: #F1F1F1;
+    opacity: 20%;
+    border-radius: 20px;
+    margin: 0 3px;
+}
+
+.dots__active {
+    background-color: #2194FF;
+    opacity: 1;
+}
+
+
+
+/* accordion */
+
+.accordion {
+    background-color: #2D3238;
+}
+
+.accordion__container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.accordion__title {
+    color: #2194FF;
+    font-size: 36px;
+    text-align: center;
+    font-family: 'Russo One', sans-serif;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.accordion__details {
+
+    color: #fff;
+    cursor: pointer;
+    padding: 10px 0px;
+    border-top: 1px solid #FFFFFF1A;
+}
+
+.accordion__details:last-of-type {
+    border-bottom: 1px solid #FFFFFF1A;
+}
+
+details[open] {
+    color: #108CFF;
+}
+
+.accordion__text {
+    color: #F1F1F1;
+    opacity: 50%;
+    padding-left: 15px;
+}
+
+
+/* askcompany */
+
+.askcompany {
+    background: #222;
+    padding-top: 55px;
+    padding-bottom: 35px;
+}
+
+.askcompany_container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.askcompany__first {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+.askcompany__form {}
+
+.askcompany__title {
+    font-size: 36px;
+    font-family: 'Russo One', sans-serif;
+    font-weight: 400;
+    color: #F1F1F1;
+}
+
+.ask__form {
+    display: flex;
+    flex-direction: column;
+}
+
+.ask__form input {
+    max-width: 400px;
+    width: 100%;
+    margin: 10px 0;
+}
+
+.input__standart {
+    border: 1px solid #DEDEDE;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.input__ask {
+    max-width: 400px;
+    width: 100%;
+    margin: 10px 0;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.button__ask {
+    font-weight: bold;
+    border: unset;
+    padding: 10px;
+    color: #F1F1F1;
+    border-radius: 20px;
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    background-color: #2194FF;
+    max-width: 220px;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.askcompany__right {
+    position: relative;
+}
+
+.cutaway {
+    position: absolute;
+    background-color: #2194FF;
+    opacity: 0.8;
+    padding: 20px;
+    border-radius: 20px;
+    bottom: 30%;
+    left: -40px;
+
+}
+
+.cutaway__username {
+    font-size: 24px;
+    font-family: 'Russo One', sans-serif;
+    font-weight: 400;
+    color: #FFFFFF;
+    opacity: 1;
+}
+
+.cutaway__prof {
+    font-weight: bold;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+
+.askcompany__second {
+    display: flex;
+    justify-content: space-between;
+}
+
+.partners__company {
+    background-color: #F1F1F1;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 170px;
+    width: 100%;
+    height: 70px;
+}
+
+.img__partners {}
+
+
+/* footer */
+.footer {
+    background: #222;
+}
+
+.footer__container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.footer__article {
+    font-family: 'Russo One', sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    color: #2194FF;
+    text-align: center;
+}
+
+.button__containerfooter {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+.button__footer {
+    width: 100%;
+    max-width: 295px;
+    height: 87px;
+    font-size: 28px;
+    color: #f1f1f1;
+    background-color: #2194FF;
+    border-radius: 10px;
+    cursor: pointer;
+    background: linear-gradient(#2194FF, #81C0FB, #108CFF)
+}
+
+.footer__card {
+    width: 100%;
+    display: flex;
+    background-color: #F1F1F1;
+    border-radius: 33px;
+
+
+}
+
+.footer__cardinfo {
+    padding: 40px;
+    width: 50%;
+}
+
+.footer__visit {
+    color: #2194FF;
+    font-family: 'Russo One', sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+}
+
+.footer__visittext {
+    margin-top: 16px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0.05em;
+    text-align: left;
+    border-bottom: 1px solid #1B263933
+}
+
+.footer__office {
+    margin-top: 30px;
+}
+
+.footer__officearticle {
+    color: #2194FF;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer__officetext {
+    font-size: 18px;
+    color:
+        #1B2639;
+}
+
+.footer__tel {
+    margin-top: 30px;
+}
+
+.footer__telarticle {
+    color: #2194FF;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer__teltext {
+    font-size: 18px;
+    color:
+        #1B2639;
+}
+
+.footer__maps {
+    width: 50%;
+}
+
+.footer__googlemaps {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 100%;
+    height: 100%;
+    border: unset;
+}
+
+.footer__policy {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    padding: 0 20px;
+}
+
+.footer__policyarticle {
+    font-size: 14px;
+    color: #F1F1F1;
+    text-decoration: underline;
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.footer__policydata {
+    font-size: 14px;
+    color: #F1F1F1;
+    text-decoration: underline;
+    cursor: pointer;
+    opacity: 0.8;
+}
